# llm-rag

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
notebooks/rag-from-scratch/: 01-overview.ipynb  02-indexing.ipynb  03-retrieval.ipynb  04-generation.ipynb  05-multi-query.ipynb  06-rag-fusion.ipynb  07-01-decomposition-recursive.ipynb  07-02-decomposition-parallel.ipynb  08-step-back.ipynb  09-hyde.ipynb  15-crag.ipynb  16-self-rag.ipynb
src/llm_rag/: __init__.py
src/llm_rag/graphs/: utils.py
src/llm_rag/graphs/crag/: crag.py
src/llm_rag/graphs/decomposition/: parallel.py  recursive.py
src/llm_rag/graphs/hyde/: hyde.py
src/llm_rag/graphs/multi_query/: multi_query.py
src/llm_rag/graphs/rag_fusion/: rag_fusion.py  reciprocal_rank_fusion.py
src/llm_rag/graphs/self_rag/: self_rag.py
src/llm_rag/graphs/step_back/: step_back.py
src/llm_rag/indexing/: reflection.py
